--- a/manifests/base/code-server-notebook-imagestream.yaml
+++ b/manifests/base/code-server-notebook-imagestream.yaml
@@ -6,7 +6,7 @@ metadata:
     opendatahub.io/notebook-image: "true"
   annotations:
     opendatahub.io/notebook-image-url: "https://github.com/red-hat-data-services/notebooks/tree/main/codeserver"
-    opendatahub.io/notebook-image-name: "Code Server | Data Science | CPU | Python 3.11"
+    opendatahub.io/notebook-image-name: "Code Server | Data Science | CPU | Python 3.12"
     opendatahub.io/notebook-image-desc: "code-server workbench allows users to code, build, and collaborate on projects directly from web."
     opendatahub.io/notebook-image-order: "19"
   name: code-server-notebook
@@ -36,7 +36,7 @@ spec:
             {"name": "ipykernel", "version": "6.29"},
             {"name": "Kubeflow-Training", "version": "1.9"}
           ]
-        openshift.io/imported-from: quay.io/opendatahub/workbench-images
+        openshift.io/imported-from: quay.io/modh/codeserver
         opendatahub.io/workbench-image-recommended: 'true'
         opendatahub.io/notebook-build-commit: odh-workbench-codeserver-datascience-cpu-py312-ubi9-commit-n_PLACEHOLDER
       from:
@@ -69,14 +69,14 @@ spec:
           ]
         openshift.io/imported-from: quay.io/modh/codeserver
         opendatahub.io/workbench-image-recommended: 'true'
-        opendatahub.io/notebook-build-commit: odh-workbench-codeserver-datascience-cpu-py311-ubi9-commit-n_PLACEHOLDER
+        opendatahub.io/notebook-build-commit: odh-workbench-codeserver-datascience-cpu-py311-ubi9-commit-n-1_PLACEHOLDER
       from:
         kind: DockerImage
-        name: odh-workbench-codeserver-datascience-cpu-py311-ubi9-n_PLACEHOLDER
+        name: odh-workbench-codeserver-datascience-cpu-py311-ubi9-n-1_PLACEHOLDER
       name: "2025.1"
       referencePolicy:
         type: Source
-    # N - 1 Version of the image
+    # N - 2 Version of the image
     - annotations:
         # language=json
         opendatahub.io/notebook-software: |
@@ -99,15 +99,15 @@ spec:
             {"name": "Kubeflow-Training", "version": "1.8"}
           ]
         openshift.io/imported-from: quay.io/modh/codeserver
-        opendatahub.io/workbench-image-recommended: 'false'
-        opendatahub.io/notebook-build-commit: odh-workbench-codeserver-datascience-cpu-py311-ubi9-commit-n-1_PLACEHOLDER
+        opendatahub.io/image-tag-outdated: "true"
+        opendatahub.io/notebook-build-commit: odh-workbench-codeserver-datascience-cpu-py311-ubi9-commit-n-2_PLACEHOLDER
       from:
         kind: DockerImage
-        name: odh-workbench-codeserver-datascience-cpu-py311-ubi9-n-1_PLACEHOLDER
-      name: "2025.1"
+        name: odh-workbench-codeserver-datascience-cpu-py311-ubi9-n-2_PLACEHOLDER
+      name: "2024.2"
       referencePolicy:
         type: Source
-    # N - 2 Version of the image
+    # N - 3 Version of the image
     - annotations:
         # language=json
         opendatahub.io/notebook-software: |
@@ -131,23 +131,23 @@ spec:
           ]
         openshift.io/imported-from: quay.io/modh/codeserver
         opendatahub.io/image-tag-outdated: "true"
-        opendatahub.io/notebook-build-commit: $(odh-codeserver-notebook-image-commit-n-2)
+        opendatahub.io/notebook-build-commit: odh-workbench-codeserver-datascience-cpu-py311-ubi9-commit-n-3_PLACEHOLDER
       from:
         kind: DockerImage
-        name: $(odh-codeserver-notebook-image-n-2)
+        name: odh-workbench-codeserver-datascience-cpu-py311-ubi9-n-3_PLACEHOLDER
       name: "2024.1"
       referencePolicy:
         type: Source
-    # N - 3 Version of the image
+    # N - 4 Version of the image
     - annotations:
         opendatahub.io/notebook-software: '[{"name":"Python","version":"v3.9"}]'
         opendatahub.io/notebook-python-dependencies: '[{"name":"code-server","version":"4.16"}]'
         openshift.io/imported-from: quay.io/modh/codeserver
         opendatahub.io/image-tag-outdated: 'true'
-        opendatahub.io/notebook-build-commit: $(odh-codeserver-notebook-image-commit-n-3)
+        opendatahub.io/notebook-build-commit: odh-workbench-codeserver-datascience-cpu-py311-ubi9-commit-n-4_PLACEHOLDER
       from:
         kind: DockerImage
-        name: $(odh-codeserver-notebook-image-n-3)
+        name: odh-workbench-codeserver-datascience-cpu-py311-ubi9-n-4_PLACEHOLDER
       name: "2023.2"
       referencePolicy:
         type: Source
