--- a/manifests/base/jupyter-datascience-notebook-imagestream.yaml
+++ b/manifests/base/jupyter-datascience-notebook-imagestream.yaml
@@ -6,7 +6,7 @@ metadata:
     opendatahub.io/notebook-image: "true"
   annotations:
     opendatahub.io/notebook-image-url: "https://github.com/red-hat-data-services/notebooks/tree/main/jupyter/datascience"
-    opendatahub.io/notebook-image-name: "Jupyter | Data Science | CPU | Python 3.11"
+    opendatahub.io/notebook-image-name: "Jupyter | Data Science | CPU | Python 3.12"
     opendatahub.io/notebook-image-desc: "Jupyter notebook image with a set of data science libraries that advanced AI/ML notebooks will use as a base image to provide a standard for libraries avialable in all notebooks"
     opendatahub.io/notebook-image-order: "7"
   name: s2i-generic-data-science-notebook
@@ -42,7 +42,7 @@ spec:
             {"name": "MySQL Connector/Python", "version": "9.3"},
             {"name": "Kubeflow-Training", "version": "1.9"}
           ]
-        openshift.io/imported-from: quay.io/opendatahub/workbench-images
+        openshift.io/imported-from: quay.io/modh/odh-generic-data-science-notebook
         opendatahub.io/workbench-image-recommended: 'true'
         opendatahub.io/notebook-build-commit: odh-workbench-jupyter-datascience-cpu-py312-ubi9-commit-n_PLACEHOLDER
       from:
@@ -81,14 +81,14 @@ spec:
           ]
         openshift.io/imported-from: quay.io/modh/odh-generic-data-science-notebook
         opendatahub.io/workbench-image-recommended: 'true'
-        opendatahub.io/notebook-build-commit: odh-workbench-jupyter-datascience-cpu-py311-ubi9-commit-n_PLACEHOLDER
+        opendatahub.io/notebook-build-commit: odh-workbench-jupyter-datascience-cpu-py311-ubi9-commit-n-1_PLACEHOLDER
       from:
         kind: DockerImage
-        name: odh-workbench-jupyter-datascience-cpu-py311-ubi9-n_PLACEHOLDER
+        name: odh-workbench-jupyter-datascience-cpu-py311-ubi9-n-1_PLACEHOLDER
       name: "2025.1"
       referencePolicy:
         type: Source
-    # N - 1 Version of the image
+    # N - 2 Version of the image
     - annotations:
         # language=json
         opendatahub.io/notebook-software: |
@@ -117,15 +117,15 @@ spec:
             {"name": "Kubeflow-Training", "version": "1.8"}
           ]
         openshift.io/imported-from: quay.io/modh/odh-generic-data-science-notebook
-        opendatahub.io/workbench-image-recommended: 'false'
-        opendatahub.io/notebook-build-commit: odh-workbench-jupyter-datascience-cpu-py311-ubi9-commit-n-1_PLACEHOLDER
+        opendatahub.io/image-tag-outdated: "true"
+        opendatahub.io/notebook-build-commit: odh-workbench-jupyter-datascience-cpu-py311-ubi9-commit-n-2_PLACEHOLDER
       from:
         kind: DockerImage
-        name: odh-workbench-jupyter-datascience-cpu-py311-ubi9-n-1_PLACEHOLDER
-      name: "2025.1"
+        name: odh-workbench-jupyter-datascience-cpu-py311-ubi9-n-2_PLACEHOLDER
+      name: "2024.2"
       referencePolicy:
         type: Source
-    # N - 2 Version of the image
+    # N - 3 Version of the image
     - annotations:
         # language=json
         opendatahub.io/notebook-software: |
@@ -153,14 +153,14 @@ spec:
           ]
         openshift.io/imported-from: quay.io/modh/odh-generic-data-science-notebook
         opendatahub.io/image-tag-outdated: "true"
-        opendatahub.io/notebook-build-commit: odh-workbench-jupyter-datascience-cpu-py311-ubi9-commit-n-2_PLACEHOLDER
+        opendatahub.io/notebook-build-commit: odh-workbench-jupyter-datascience-cpu-py311-ubi9-commit-n-3_PLACEHOLDER
       from:
         kind: DockerImage
-        name: odh-workbench-jupyter-datascience-cpu-py311-ubi9-n-2_PLACEHOLDER
+        name: odh-workbench-jupyter-datascience-cpu-py311-ubi9-n-3_PLACEHOLDER
       name: "2024.1"
       referencePolicy:
         type: Source
-    # N - 3 Version of the image
+    # N - 4 Version of the image
     - annotations:
         # language=json
         opendatahub.io/notebook-software: |
@@ -188,14 +188,14 @@ spec:
           ]
         openshift.io/imported-from: quay.io/modh/odh-generic-data-science-notebook
         opendatahub.io/image-tag-outdated: "true"
-        opendatahub.io/notebook-build-commit: odh-workbench-jupyter-datascience-cpu-py311-ubi9-commit-n-3_PLACEHOLDER
+        opendatahub.io/notebook-build-commit: odh-workbench-jupyter-datascience-cpu-py311-ubi9-commit-n-4_PLACEHOLDER
       from:
         kind: DockerImage
-        name: odh-workbench-jupyter-datascience-cpu-py311-ubi9-n-3_PLACEHOLDER
+        name: odh-workbench-jupyter-datascience-cpu-py311-ubi9-n-4_PLACEHOLDER
       name: "2023.2"
       referencePolicy:
         type: Source
-    # N - 4 Version of the image
+    # N - 5 Version of the image
     - annotations:
         # language=json
         opendatahub.io/notebook-software: |
@@ -217,14 +217,14 @@ spec:
             ]
         openshift.io/imported-from: quay.io/modh/odh-generic-data-science-notebook
         opendatahub.io/image-tag-outdated: "true"
-        opendatahub.io/notebook-build-commit: odh-workbench-jupyter-datascience-cpu-py311-ubi9-commit-n-4_PLACEHOLDER
+        opendatahub.io/notebook-build-commit: odh-workbench-jupyter-datascience-cpu-py311-ubi9-commit-n-5_PLACEHOLDER
       from:
         kind: DockerImage
-        name: odh-workbench-jupyter-datascience-cpu-py311-ubi9-n-4_PLACEHOLDER
+        name: odh-workbench-jupyter-datascience-cpu-py311-ubi9-n-5_PLACEHOLDER
       name: "2023.1"
       referencePolicy:
         type: Source
-    # N - 5 Version of the image
+    # N - 6 Version of the image
     - annotations:
         # language=json
         opendatahub.io/notebook-software: |
@@ -244,10 +244,10 @@ spec:
           ]
         openshift.io/imported-from: quay.io/modh/odh-generic-data-science-notebook
         opendatahub.io/image-tag-outdated: 'true'
-        opendatahub.io/notebook-build-commit: odh-workbench-jupyter-datascience-cpu-py311-ubi9-commit-n-5_PLACEHOLDER
+        opendatahub.io/notebook-build-commit: odh-workbench-jupyter-datascience-cpu-py311-ubi9-commit-n-6_PLACEHOLDER
       from:
         kind: DockerImage
-        name: odh-workbench-jupyter-datascience-cpu-py311-ubi9-n-5_PLACEHOLDER
+        name: odh-workbench-jupyter-datascience-cpu-py311-ubi9-n-6_PLACEHOLDER
       name: "1.2"
       referencePolicy:
         type: Source
