--- a/manifests/base/jupyter-rocm-tensorflow-notebook-imagestream.yaml
+++ b/manifests/base/jupyter-rocm-tensorflow-notebook-imagestream.yaml
@@ -6,7 +6,7 @@ metadata:
     opendatahub.io/notebook-image: "true"
   annotations:
     opendatahub.io/notebook-image-url: "https://github.com/red-hat-data-services/notebooks/blob/main/jupyter/rocm/tensorflow"
-    opendatahub.io/notebook-image-name: "Jupyter | TensorFlow | ROCm | Python 3.11"
+    opendatahub.io/notebook-image-name: "Jupyter | TensorFlow | ROCm | Python 3.12"
     opendatahub.io/notebook-image-desc: "Jupyter ROCm optimized TensorFlow notebook image for ODH notebooks."
     opendatahub.io/notebook-image-order: "16"
     opendatahub.io/recommended-accelerators: '["amd.com/gpu"]'
@@ -43,7 +43,7 @@ spec:
             {"name": "Psycopg", "version": "3.2"},
             {"name": "MySQL Connector/Python", "version": "9.3"}
           ]
-        openshift.io/imported-from: quay.io/opendatahub/workbench-images
+        openshift.io/imported-from: quay.io/modh/rocm-notebooks
         opendatahub.io/workbench-image-recommended: 'true'
         opendatahub.io/notebook-build-commit: odh-workbench-jupyter-tensorflow-rocm-py312-ubi9-commit-n_PLACEHOLDER
       from:
@@ -81,15 +81,15 @@ spec:
             {"name": "MySQL Connector/Python", "version": "9.3"}
           ]
         openshift.io/imported-from: quay.io/modh/rocm-notebooks
-        opendatahub.io/workbench-image-recommended: 'true'
-        opendatahub.io/notebook-build-commit: odh-workbench-jupyter-tensorflow-rocm-py311-ubi9-commit-n_PLACEHOLDER
+        opendatahub.io/workbench-image-recommended: 'false'
+        opendatahub.io/notebook-build-commit: odh-workbench-jupyter-tensorflow-rocm-py311-ubi9-commit-n-1_PLACEHOLDER
       from:
         kind: DockerImage
-        name: odh-workbench-jupyter-tensorflow-rocm-py311-ubi9-n_PLACEHOLDER
+        name: odh-workbench-jupyter-tensorflow-rocm-py311-ubi9-n-1_PLACEHOLDER
       name: "2025.1"
       referencePolicy:
         type: Source
-    # N - 1 Version of the image
+    # N - 2 Version of the image
     - annotations:
         # language=json
         opendatahub.io/notebook-software: |
@@ -118,11 +118,11 @@ spec:
             {"name": "MySQL Connector/Python", "version": "9.0"}
           ]
         openshift.io/imported-from: quay.io/modh/rocm-notebooks
-        opendatahub.io/workbench-image-recommended: 'false'
-        opendatahub.io/notebook-build-commit: odh-workbench-jupyter-tensorflow-rocm-py311-ubi9-commit-n-1_PLACEHOLDER
+        opendatahub.io/image-tag-outdated: "true"
+        opendatahub.io/notebook-build-commit: odh-workbench-jupyter-tensorflow-rocm-py311-ubi9-commit-n-2_PLACEHOLDER
       from:
         kind: DockerImage
-        name: odh-workbench-jupyter-tensorflow-rocm-py311-ubi9-n-1_PLACEHOLDER
-      name: "2025.1"
+        name: odh-workbench-jupyter-tensorflow-rocm-py311-ubi9-n-2_PLACEHOLDER
+      name: "2024.2"
       referencePolicy:
         type: Source
