--- a/manifests/base/jupyter-tensorflow-notebook-imagestream.yaml
+++ b/manifests/base/jupyter-tensorflow-notebook-imagestream.yaml
@@ -47,7 +47,7 @@ spec:
             {"name": "Psycopg", "version": "3.2"},
             {"name": "MySQL Connector/Python", "version": "9.3"}
           ]
-        openshift.io/imported-from: quay.io/opendatahub/workbench-images
+        openshift.io/imported-from: quay.io/modh/cuda-notebooks
         opendatahub.io/workbench-image-recommended: 'true'
         opendatahub.io/notebook-build-commit: odh-workbench-jupyter-tensorflow-cuda-py312-ubi9-commit-n_PLACEHOLDER
       from:
@@ -89,15 +89,15 @@ spec:
             {"name": "MySQL Connector/Python", "version": "9.3"}
           ]
         openshift.io/imported-from: quay.io/modh/cuda-notebooks
-        opendatahub.io/workbench-image-recommended: 'true'
-        opendatahub.io/notebook-build-commit: odh-workbench-jupyter-tensorflow-cuda-py311-ubi9-commit-n_PLACEHOLDER
+        opendatahub.io/workbench-image-recommended: 'false'
+        opendatahub.io/notebook-build-commit: odh-workbench-jupyter-tensorflow-cuda-py311-ubi9-commit-n-1_PLACEHOLDER
       from:
         kind: DockerImage
-        name: odh-workbench-jupyter-tensorflow-cuda-py311-ubi9-n_PLACEHOLDER
+        name: odh-workbench-jupyter-tensorflow-cuda-py311-ubi9-n-1_PLACEHOLDER
       name: "2025.1"
       referencePolicy:
         type: Source
-    # N - 1 Version of the image
+    # N - 2 Version of the image
     - annotations:
         # language=json
         opendatahub.io/notebook-software: |
@@ -130,15 +130,15 @@ spec:
             {"name": "MySQL Connector/Python", "version": "9.0"}
           ]
         openshift.io/imported-from: quay.io/modh/cuda-notebooks
-        opendatahub.io/workbench-image-recommended: 'false'
-        opendatahub.io/notebook-build-commit: odh-workbench-jupyter-tensorflow-cuda-py311-ubi9-commit-n-1_PLACEHOLDER
+        opendatahub.io/image-tag-outdated: "true"
+        opendatahub.io/notebook-build-commit: odh-workbench-jupyter-tensorflow-cuda-py311-ubi9-commit-n-2_PLACEHOLDER
       from:
         kind: DockerImage
-        name: odh-workbench-jupyter-tensorflow-cuda-py311-ubi9-n-1_PLACEHOLDER
-      name: "2025.1"
+        name: odh-workbench-jupyter-tensorflow-cuda-py311-ubi9-n-2_PLACEHOLDER
+      name: "2024.2"
       referencePolicy:
         type: Source
-    # N - 2 Version of the image
+    # N - 3 Version of the image
     - annotations:
         # language=json
         opendatahub.io/notebook-software: |
@@ -170,14 +170,14 @@ spec:
           ]
         openshift.io/imported-from: quay.io/modh/cuda-notebooks
         opendatahub.io/image-tag-outdated: "true"
-        opendatahub.io/notebook-build-commit: odh-workbench-jupyter-tensorflow-cuda-py311-ubi9-commit-n-2_PLACEHOLDER
+        opendatahub.io/notebook-build-commit: odh-workbench-jupyter-tensorflow-cuda-py311-ubi9-commit-n-3_PLACEHOLDER
       from:
         kind: DockerImage
-        name: odh-workbench-jupyter-tensorflow-cuda-py311-ubi9-n-2_PLACEHOLDER
+        name: odh-workbench-jupyter-tensorflow-cuda-py311-ubi9-n-3_PLACEHOLDER
       name: "2024.1"
       referencePolicy:
         type: Source
-    # N - 3 Version of the image
+    # N - 4 Version of the image
     - annotations:
         # language=json
         opendatahub.io/notebook-software: |
@@ -209,14 +209,14 @@ spec:
           ]
         openshift.io/imported-from: quay.io/modh/cuda-notebooks
         opendatahub.io/image-tag-outdated: "true"
-        opendatahub.io/notebook-build-commit: odh-workbench-jupyter-tensorflow-cuda-py311-ubi9-commit-n-3_PLACEHOLDER
+        opendatahub.io/notebook-build-commit: odh-workbench-jupyter-tensorflow-cuda-py311-ubi9-commit-n-4_PLACEHOLDER
       from:
         kind: DockerImage
-        name: odh-workbench-jupyter-tensorflow-cuda-py311-ubi9-n-3_PLACEHOLDER
+        name: odh-workbench-jupyter-tensorflow-cuda-py311-ubi9-n-4_PLACEHOLDER
       name: "2023.2"
       referencePolicy:
         type: Source
-    # N - 4 Version of the image
+    # N - 5 Version of the image
     - annotations:
         # language=json
         opendatahub.io/notebook-software: |
@@ -242,14 +242,14 @@ spec:
           ]
         openshift.io/imported-from: quay.io/modh/cuda-notebooks
         opendatahub.io/image-tag-outdated: "true"
-        opendatahub.io/notebook-build-commit: odh-workbench-jupyter-tensorflow-cuda-py311-ubi9-commit-n-4_PLACEHOLDER
+        opendatahub.io/notebook-build-commit: odh-workbench-jupyter-tensorflow-cuda-py311-ubi9-commit-n-5_PLACEHOLDER
       from:
         kind: DockerImage
-        name: odh-workbench-jupyter-tensorflow-cuda-py311-ubi9-n-4_PLACEHOLDER
+        name: odh-workbench-jupyter-tensorflow-cuda-py311-ubi9-n-5_PLACEHOLDER
       name: "2023.1"
       referencePolicy:
         type: Source
-    # N - 5 Version of the image
+    # N - 6 Version of the image
     - annotations:
         # language=json
         opendatahub.io/notebook-software: |
@@ -273,10 +273,10 @@ spec:
           ]
         openshift.io/imported-from: quay.io/modh/cuda-notebooks
         opendatahub.io/image-tag-outdated: 'true'
-        opendatahub.io/notebook-build-commit: odh-workbench-jupyter-tensorflow-cuda-py311-ubi9-commit-n-5_PLACEHOLDER
+        opendatahub.io/notebook-build-commit: odh-workbench-jupyter-tensorflow-cuda-py311-ubi9-commit-n-6_PLACEHOLDER
       from:
         kind: DockerImage
-        name: odh-workbench-jupyter-tensorflow-cuda-py311-ubi9-n-5_PLACEHOLDER
+        name: odh-workbench-jupyter-tensorflow-cuda-py311-ubi9-n-6_PLACEHOLDER
       name: "1.2"
       referencePolicy:
         type: Source
