--- a/jupyter/pytorch+llmcompressor/ubi9-python-3.12/pyproject.toml
+++ b/jupyter/pytorch+llmcompressor/ubi9-python-3.12/pyproject.toml
@@ -12,53 +12,65 @@ dependencies = [
     # PyTorch packages
     "tensorboard~=2.20.0",
     "torch==2.7.1",
-    "torchvision==0.22.1",
+    "torchvision~=0.22.1",
 
     # llmcompressor packages
     # see https://redhat-internal.slack.com/archives/C0961HQ858Q/p1757007056725559?thread_ts=1756924127.136609&cid=C0961HQ858Q
-    "llmcompressor==0.7.1",
-    "lm-eval~=0.4.8",
+
+    # llmcompressor packages
+    "llmcompressor~=0.7.1",
+    "lm-eval~=0.4.9",
+    "loguru",
+    "pyyaml>=6.0.0",
+    "requests>=2.0.0",
+    "tqdm>=4.0.0",
+    "transformers>4.0,<5.0",
+    "datasets",
+    "accelerate>=0.20.3,!=1.1.0",
+    "pynvml",
+    "pillow",
+    "compressed-tensors",
 
     # Datascience and useful extensions
     "boto3~=1.40.27",
     "kafka-python-ng~=2.2.3",
     "kfp~=2.14.3",
-    "matplotlib~=3.10.1",
+    "matplotlib~=3.10.6",
     "numpy~=2.2.6",
-    "pandas~=2.2.3",
-    "plotly~=6.0.0",
-    "scikit-learn~=1.6.1",
-    "scipy~=1.15.2",
-    "skl2onnx~=1.18.0",
+    "pandas~=2.3.2",
+    "plotly~=6.3.0",
+    "scikit-learn~=1.7.2",
+    "scipy~=1.16.1",
+    "skl2onnx~=1.19.1",
     "onnxconverter-common~=1.13.0", # Required for skl2onnx, as upgraded version is not compatible with protobuf
-    "kubeflow-training==1.9.0",
+    "kubeflow-training==1.9.3",
     "feast~=0.53.0",
 
     # DB connectors
-    "pymongo~=4.11.2",
-    "psycopg~=3.2.5",
+    "pymongo~=4.14.1",
+    "psycopg~=3.2.10",
     "pyodbc~=5.2.0",
-    "mysql-connector-python~=9.3.0",
+    "mysql-connector-python~=9.4.0",
 
     # JupyterLab packages
     "odh-elyra==4.2.4",
     "odh-jupyter-trash-cleanup==0.1.1",
 
-    "jupyterlab==4.4.4",
+    "jupyterlab==4.4.7",
     "jupyter-bokeh~=4.0.5",
-    "jupyter-server~=2.16.0",
+    "jupyter-server~=2.17.0",
     "jupyter-server-proxy~=4.4.0",
     "jupyter-server-terminals~=0.5.3",
-    "jupyterlab-git~=0.51.1",
+    "jupyterlab-git~=0.51.2",
     "jupyterlab-lsp~=5.1.0",
-    "jupyterlab-widgets~=3.0.13",
+    "jupyterlab-widgets~=3.0.15",
     "jupyter-resource-usage~=1.1.1",
     "nbdime~=4.0.2",
     "nbgitpuller~=1.2.2",
 
     # Base packages
     "wheel~=0.45.1",
-    "setuptools~=78.1.1",
+    "setuptools~=79.0.1",
 ]
 
 ## https://docs.astral.sh/uv/concepts/resolution/#dependency-metadata
@@ -79,7 +91,7 @@ torchvision = { index = "pytorch" }
 # https://docs.astral.sh/uv/concepts/indexes/#package-indexes
 [[tool.uv.index]]
 name = "pytorch"
-url = "https://download.pytorch.org/whl/cu126"
+url = "https://download.pytorch.org/whl/cu128"
 explicit = true
 
 # https://docs.astral.sh/uv/concepts/resolution/#dependency-overrides
