Upgrade RStudio packages for 2025b

--- a/rstudio/c9s-python-3.11/pyproject.toml
+++ b/rstudio/c9s-python-3.11/pyproject.toml
@@ -5,8 +5,8 @@ requires-python = "==3.11.*"
 
 dependencies = [
     # Base packages
-    "wheel~=0.45.1",
-    "setuptools~=78.1.1",
+    'wheel~=0.45.1',
+    'setuptools~=80.9.0',
 ]
 
 [tool.uv]
