RHAIENG-670: feat(pyproject): add feast~=0.53.0 dependency across various runtimes and environments
chore(manifests): add feast to manifests
chore(tests): update tests so that they don't fail with feast now present

--- a/codeserver/ubi9-python-3.12/pyproject.toml
+++ b/codeserver/ubi9-python-3.12/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "skl2onnx~=1.18.0",
     "ipykernel~=6.29.5",
     "kubeflow-training==1.9.2",
+    "feast~=0.53.0",
 
     # Some extra useful packages
     "opencensus~=0.11.4",
