--- a/jupyter/pytorch+llmcompressor/ubi9-python-3.12/pyproject.toml
+++ b/jupyter/pytorch+llmcompressor/ubi9-python-3.12/pyproject.toml
@@ -6,8 +6,6 @@ requires-python = "==3.12.*"
 
 # https://docs.astral.sh/uv/concepts/projects/workspaces/#when-not-to-use-workspaces
 dependencies = [
-    "vllm~=0.10.1.1",
-
     # see https://redhat-internal.slack.com/archives/C079FE5H94J/p1756933987117709?thread_ts=1756933154.294109&cid=C079FE5H94J
     # for a discussion on what version of torch to use
 
@@ -34,6 +32,7 @@ dependencies = [
     "skl2onnx~=1.18.0",
     "onnxconverter-common~=1.13.0", # Required for skl2onnx, as upgraded version is not compatible with protobuf
     "kubeflow-training==1.9.0",
+    "feast~=0.53.0",
 
     # DB connectors
     "pymongo~=4.11.2",
@@ -44,7 +43,7 @@ dependencies = [
     # JupyterLab packages
     "odh-elyra==4.2.4",
     "odh-jupyter-trash-cleanup==0.1.0",
-    
+
     "jupyterlab==4.4.4",
     "jupyter-bokeh~=4.0.5",
     "jupyter-server~=2.16.0",
