--- a/jupyter/pytorch/ubi9-python-3.12/pyproject.toml
+++ b/jupyter/pytorch/ubi9-python-3.12/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "onnxconverter-common~=1.13.0", # Required for skl2onnx, as upgraded version is not compatible with protobuf
     "codeflare-sdk~=0.31.0",
     "kubeflow-training==1.9.2",
+    "feast~=0.53.0",
 
     # DB connectors
     "pymongo~=4.11.2",
