--- a/jupyter/tensorflow/ubi9-python-3.12/pyproject.toml
+++ b/jupyter/tensorflow/ubi9-python-3.12/pyproject.toml
@@ -15,7 +15,7 @@ dependencies = [
     "kafka-python-ng~=2.2.3",
     "kfp~=2.12.1",
     "matplotlib~=3.10.1",
-    "numpy~=1.26.4",
+    "numpy~=2.1.3",
     "pandas~=2.2.3",
     "plotly~=6.0.0",
     "scikit-learn~=1.6.1",
@@ -23,6 +23,7 @@ dependencies = [
     "skl2onnx~=1.18.0",
     "onnxconverter-common~=1.13.0", # Required for skl2onnx, as upgraded version is not compatible with protobuf
     "codeflare-sdk~=0.31.0",
+    "feast~=0.53.0",
 
     # DB connectors
     "pymongo~=4.11.2",
