--- a/manifests/base/jupyter-tensorflow-notebook-imagestream.yaml
+++ b/manifests/base/jupyter-tensorflow-notebook-imagestream.yaml
@@ -35,7 +35,7 @@ spec:
             {"name": "Kafka-Python-ng", "version": "2.2"},
             {"name": "Kfp", "version": "2.12"},
             {"name": "Matplotlib", "version": "3.10"},
-            {"name": "Numpy", "version": "1.26"},
+            {"name": "Numpy", "version": "2.1"},
             {"name": "Pandas", "version": "2.2"},
             {"name": "Scikit-learn", "version": "1.6"},
             {"name": "Scipy", "version": "1.15"},
@@ -43,6 +43,7 @@ spec:
             {"name": "PyMongo", "version": "4.11"},
             {"name": "Pyodbc", "version": "5.2"},
             {"name": "Codeflare-SDK", "version": "0.31"},
+            {"name": "Feast", "version": "0.53"},
             {"name": "Sklearn-onnx", "version": "1.18"},
             {"name": "Psycopg", "version": "3.2"},
             {"name": "MySQL Connector/Python", "version": "9.3"}
