--- a/runtimes/datascience/ubi9-python-3.12/pyproject.toml
+++ b/runtimes/datascience/ubi9-python-3.12/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     'skl2onnx~=1.18.0',
     'onnxconverter-common~=1.13.0', # Required for skl2onnx, as upgraded version is not compatible with protobuf
     'codeflare-sdk~=0.31.0; platform_machine != "s390x" and platform_machine != "ppc64le"',
+    "feast~=0.53.0",
 
     # DB connectors
     'pymongo~=4.11.2',
