--- a/runtimes/pytorch+llmcompressor/ubi9-python-3.12/pyproject.toml
+++ b/runtimes/pytorch+llmcompressor/ubi9-python-3.12/pyproject.toml
@@ -4,8 +4,6 @@ version = "0.1.0"
 requires-python = "==3.12.*"
 
 dependencies = [
-    'vllm~=0.10.1.1',
-
     # see https://redhat-internal.slack.com/archives/C079FE5H94J/p1756933987117709?thread_ts=1756933154.294109&cid=C079FE5H94J
     # for a discussion on what version of torch to use
 
@@ -29,6 +27,7 @@ dependencies = [
     'scipy~=1.15.2',
     'skl2onnx~=1.18.0',
     'onnxconverter-common~=1.13.0', # Required for skl2onnx, as upgraded version is not compatible with protobuf
+    "feast~=0.53.0",
 
     # DB connectors
     'pymongo~=4.11.2',
