--- a/runtimes/tensorflow/ubi9-python-3.12/pyproject.toml
+++ b/runtimes/tensorflow/ubi9-python-3.12/pyproject.toml
@@ -14,7 +14,7 @@ dependencies = [
     "boto3~=1.37.8",
     "kafka-python-ng~=2.2.3",
     "matplotlib~=3.10.1",
-    "numpy~=1.26.4",
+    "numpy~=2.1.3",
     "pandas~=2.2.3",
     "plotly~=6.0.0",
     "scikit-learn~=1.6.1",
@@ -23,6 +23,7 @@ dependencies = [
     # Required for skl2onnx, as upgraded version is not compatible with protobuf
     "onnxconverter-common~=1.13.0",
     "codeflare-sdk~=0.31.0",
+    "feast~=0.53.0",
 
     # DB connectors
     "pymongo~=4.11.2",
