arm64(cuda): try building remaining non-ROCm images for arm64
# Conflicts:
#	jupyter/datascience/ubi9-python-3.12/pylock.toml
#	runtimes/pytorch/ubi9-python-3.12/pylock.toml
#	runtimes/pytorch/ubi9-python-3.12/pyproject.toml

--- a/runtimes/pytorch/ubi9-python-3.12/pyproject.toml
+++ b/runtimes/pytorch/ubi9-python-3.12/pyproject.toml
@@ -6,8 +6,8 @@ requires-python = "==3.12.*"
 dependencies = [
     # PyTorch packages
     "tensorboard~=2.20.0",
-    "torch==2.7.1+cu128",
-    "torchvision==0.22.1+cu128",
+    "torch==2.7.1+cu128; platform_machine == 'aarch64'",
+    "torchvision==0.22.1+cu128; platform_machine == 'aarch64'", # CUDA version not pre-built by pytorch for aarch64
 
     # Datascience and useful extensions
     "boto3~=1.40.52",
@@ -56,12 +56,20 @@ dependencies = [
 
 [tool.uv.sources]
 torch = { index = "pytorch-cuda" }
-torchvision = { index = "pytorch-cuda" }
+torchvision = [
+            { index = "pytorch-cuda", marker = "platform_machine == 'x86_64'" },
+            { index = "pytorch-cpu", marker = "platform_machine == 'aarch64'" }]
 
 # https://docs.astral.sh/uv/concepts/indexes/#package-indexes
 [[tool.uv.index]]
 name = "pytorch-cuda"
 url = "https://download.pytorch.org/whl/cu128"
+explicit = true
+
+# Add CPU index for ARM64
+[[tool.uv.index]]
+name = "pytorch-cpu"
+url = "https://download.pytorch.org/whl/cpu"
 explicit = true
 
 [tool.uv]
