--- a/runtimes/pytorch+llmcompressor/ubi9-python-3.12/pyproject.toml
+++ b/runtimes/pytorch+llmcompressor/ubi9-python-3.12/pyproject.toml
@@ -61,12 +61,22 @@ dependencies = [
 ]
 
 [tool.uv.sources]
-torch = { index = "pytorch-cuda" }
-torchvision = { index = "pytorch-cuda" }
+torch = [
+      { index = "pytorch-cuda", marker = "platform_machine == 'x86_64'" },
+      { index = "pytorch-cpu", marker = "platform_machine == 'aarch64'" }]
+torchvision = [
+            { index = "pytorch-cuda", marker = "platform_machine == 'x86_64'" },
+            { index = "pytorch-cpu", marker = "platform_machine == 'aarch64'" }]
 
 [[tool.uv.index]]
 name = "pytorch-cuda"
 url = "https://download.pytorch.org/whl/cu126"
+explicit = true
+
+# Add CPU index for ARM64
+[[tool.uv.index]]
+name = "pytorch-cpu"
+url = "https://download.pytorch.org/whl/cpu"
 explicit = true
 
 [tool.uv]
