Fix path on the build-arg-file field

--- a/.tekton/odh-pipeline-runtime-minimal-cpu-py312-ubi9-push.yaml
+++ b/.tekton/odh-pipeline-runtime-minimal-cpu-py312-ubi9-push.yaml
@@ -27,7 +27,7 @@ spec:
   - name: dockerfile
     value: runtimes/minimal/ubi9-python-3.12/Dockerfile.cpu
   - name: build-args-file
-    value: runtimes/minimal/build-args/cpu.conf
+    value: runtimes/minimal/ubi9-python-3.12/build-args/cpu.conf
   - name: path-context
     value: .
   - name: additional-tags
